--- a/ICTScan/app/src/main/res/values/strings.xml
+++ b/ICTScan/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ICTScan</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_image_picker">ImagePickerActivity</string>
+    <string name="change_image">Change Image</string>
 </resources>
